--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -9,10 +9,10 @@
   <% @gossipall.each do |e| %>
   <div class="card" style="width: 18rem;">
   <div class="card-header">
-    <a href="<%=gossips_path(e.id)%>"> <%= e.user.first_name %> <%= e.user.last_name %> </a>
+     <%= e.user.first_name %> <%= e.user.last_name %>
   </div>
   <ul class="list-group list-group-flush">
-    <li class="list-group-item"><%= e.title %></li>
+    <li class="list-group-item"><a href="<%=gossips_path(e.id)%>"><%= e.title %></a></li>
   </ul>
 </div>
   <br><br>
