--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,7 +1,7 @@
 <center>
 <br><br><br>
-<h3>Page contact</h3>
-<p>Contactez nous à : </p>
+<h3>Contact :</h3>
+<br>
 
 <a href="mailto:teamlille@wakandamail.com"> Teamlille@wakandamail.com </a>
 
