--- a/app/views/welcome/show.html.erb
+++ b/app/views/welcome/show.html.erb
@@ -1,7 +1,7 @@
 
 <center>
   <br><br>
-<h1> Welcome <%= params[:user_entry]%> </h1>
-<p>in the Gossip Project by Lille</p>
+<h1> Bienvenue <%= params[:user_entry]%> </h1>
+<p>sur le Gossip Project by Lille</p>
 
 </center>
