modif des pages hmtl

--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -3,6 +3,6 @@
 <h3>Contact :</h3>
 <br>
 
-<a href="mailto:teamlille@wakandamail.com"> Teamlille@wakandamail.com </a>
+<a href="mailto:loisoncorentin@yahoo.fr"> loisoncorentin@yahoo.fr </a>
 
 </center>
