--- a/app/views/static_pages/team.html.erb
+++ b/app/views/static_pages/team.html.erb
@@ -3,7 +3,7 @@
     <br><br><br>
 <h4><p>The Gossip Project by Lille</p></h4>
 <br>
-<p>Ce projet a été réalisé par <br><br> Alex Dnz <br> & <br> Marg Vander</p>
+<p>Ce projet a été réalisé par <br><br> Filoupegase <br>
 
 </center>
 </section>
