modif html home

--- a/app/views/static_pages/team.html.erb
+++ b/app/views/static_pages/team.html.erb
@@ -1,7 +1,7 @@
 <section>
   <center>
     <br><br><br>
-<h4><p>The Gossip Project by Lille</p></h4>
+<h4><p>The Gossip Project</p></h4>
 <br>
 <p>Ce projet a été réalisé par <br><br> Filoupegase <br>
 
